@@ -45,13 +45,13 @@ class MenuLeft {
 
 
 	/**
-	 *  \brief      Constructor
-	 *  \param      db                  Database handler
-     *  \param      menu_array          Table of menu entries to show before entries of menu handler
-     *  \param      menu_array_after    Table of menu entries to show after entries of menu handler
+	 *  Constructor
+	 *  @param      db                  Database handler
+     *  @param      menu_array          Table of menu entries to show before entries of menu handler
+     *  @param      menu_array_after    Table of menu entries to show after entries of menu handler
 	 *
 	 */
-	function MenuLeft($db,&$menu_array='',&$menu_array_after='')
+	function MenuLeft($db,&$menu_array,&$menu_array_after)
 	{
 		$this->db=$db;
 		$this->menu_array=$menu_array;
